<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivSignUpTop"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/starry_night"
                    app:layout_constraintDimensionRatio="H, 16:9"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/vSignUpLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="@id/ivSignUpTop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_rectangle_white_bg_corner_top_16"
                    android:orientation="vertical"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="70dp"
                    app:layout_constraintTop_toBottomOf="@id/vSignUpLine"
                    tools:layout_editor_absoluteX="0dp">

                    <EditText
                        android:id="@+id/etvSignUpEmail"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_gravity="center"
                        android:background="@drawable/shape_rectangle_gray_bg_corner_30"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="20dp"
                        android:textColor="@color/main_black"
                        android:textColorHint="@color/gray"
                        android:textSize="18dp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <EditText
                            android:id="@+id/etvSignUpPassword"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:layout_gravity="center"
                            android:background="@drawable/shape_rectangle_gray_bg_corner_30"
                            android:fontFamily="@font/roboto_regular"
                            android:hint="Password"
                            android:inputType="textPassword"
                            android:paddingHorizontal="20dp"
                            android:textColor="@color/main_black"
                            android:textColorHint="@color/gray"
                            android:textSize="18dp" />

                        <ImageView
                            android:id="@+id/ivSignUpShowPassword"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical|end"
                            android:layout_marginEnd="20dp"
                            android:background="?android:attr/actionBarItemBackground"
                            android:src="@drawable/ic_show_password_gray" />

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <EditText
                            android:id="@+id/etvSignUpPasswordAgain"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:layout_gravity="center"
                            android:background="@drawable/shape_rectangle_gray_bg_corner_30"
                            android:fontFamily="@font/roboto_regular"
                            android:hint="@string/password_again"
                            android:inputType="textPassword"
                            android:paddingHorizontal="20dp"
                            android:textColor="@color/main_black"
                            android:textColorHint="@color/gray"
                            android:textSize="18dp" />

                        <ImageView
                            android:id="@+id/ivSignUpShowPasswordAgain"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical|end"
                            android:layout_marginEnd="20dp"
                            android:background="?android:attr/actionBarItemBackground"
                            android:src="@drawable/ic_show_password_gray" />

                    </FrameLayout>


                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/btnSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="20dp"
                        android:elevation="0dp"
                        app:cardBackgroundColor="@color/dark_blue"
                        app:cardCornerRadius="30dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="14dp"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/sign_up"
                            android:textColor="@color/white"
                            android:textSize="18dp" />

                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/tvSignUpForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="?android:selectableItemBackground"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/forgot_password"
                        android:textColor="@color/dark_blue"
                        android:textSize="16dp"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="70dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/llSignUpFacebook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_facebook" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="8dp"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/sign_up"
                                android:textColor="@color/dark_blue"
                                android:textSize="@dimen/dimen_text_size_14" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llSignUpGoogle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:background="?android:selectableItemBackground"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_google" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="8dp"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/sign_up"
                                android:textColor="@color/dark_blue"
                                android:textSize="@dimen/dimen_text_size_14" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/have_account"
                            android:textColor="@color/gray"
                            android:textSize="16dp" />

                        <TextView
                            android:id="@+id/tvSignUpSignIn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:background="?android:selectableItemBackground"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/sign_in"
                            android:textColor="@color/dark_blue"
                            android:textSize="16dp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>

</layout>
