...
    <string name="items">Hiện vật</string>
    <string name="stories">Câu chuyện</string>
    <string name="stories_lower_case">câu chuyện</string>
    <string name="view_all">Xem tất cả</string>
    <string name="online_exhibit">triển lãm trực tuyến</string>
    <string name="input_user_name">Nhập tên đăng nhập</string>
    <string name="login">Đăng nhập</string>
    <string name="input_password">Nhập mật khẩu</string>
    <string name="save_account">Lưu tài khoản</string>
    <string name="login3rd">Hoặc đăng nhập với</string>
    <string name="error_field_must_not_be_empty">Trường bắt buộc</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
...
